@@ -1,26 +1,28 @@
 package com.longhair.bloodrecovery.dto;
 
 import lombok.Data;
+import lombok.extern.slf4j.Slf4j;
 
 @Data
+@Slf4j
 public class SearchData {
     private String bloodType = null;    // 1
     private boolean status = false;     // 2
-    private int sido = 0;               // 4
-    private int sigungu = 0;
+    private String sido = null;               // 4
+    private String sigungu = null;
 
     public int getSearchMode(){
         int result=0;
-        if(!(bloodType == null || bloodType.trim().isEmpty())){
+        if(!bloodType.isBlank()){
             result += 1;
         }
         if(status){
             result += 2;
         }
-        if(sido > 0 && sigungu > 0){
+        if(!sido.isBlank() && !sigungu.isBlank()){
             result += 4;
         }
-        System.out.println(result);
+        log.info("filtering mode is " + result);
         return result;
     }
 }
